--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "haversine-distance": "^1.2.1",
     "luxon": "^2.5.2",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "seedrandom": "^3.0.5",
