--- a/src/package.json
+++ b/src/package.json
@@ -22,7 +22,9 @@
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "haversine-distance": "^1.2.1",
+    "hbs": "^4.2.0",
     "luxon": "^2.5.2",
+    "mongoose": "^8.1.1",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
