--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.1.1",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-config": "^7.5.0",
+    "zlib": "^1.0.5"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +49,10 @@
   },
   "devDependencies": {
     "prettier": "^3.2.4"
-  }
+  },
+  "browser": {
+
+    "path": false
+    
+    }
 }
